apps/passes/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: passes
  namespace: default
  labels:
    app: passes
spec:
  replicas: 1
  selector:
    matchLabels:
      app: passes
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: passes
    spec:
      volumes:
        - name: secret
          secret:
            secretName: passes-keys
            defaultMode: 420
      containers:
        - name: passes
          image: ghcr.io/wisvch/passes:20261002-184-64bd9f6 # {"$imagepolicy": "flux-system:passes"}
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - mountPath: /keys
              name: secret
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
          resources: # 7d peak: ~13Mi memory and <1m CPU;
            limits:
              cpu: 50m
              memory: 50Mi
            requests:
              cpu: 15m
              memory: 25Mi
