apps/passes/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: passes
  name: passes
  namespace: default
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: passes
  sessionAffinity: None
  type: ClusterIP
